--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -4955,6 +4955,39 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" name="whiteblack"/>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="alertCell" rowHeight="86" id="Yux-A1-RuK">
+                                        <rect key="frame" x="0.0" y="696.66666984558105" width="390" height="86"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Yux-A1-RuK" id="gAJ-Vi-uhC">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="86"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark.triangle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Dsk-b7-l1i">
+                                                    <rect key="frame" x="20" y="24.666666666666664" width="36" height="37"/>
+                                                    <color key="tintColor" systemColor="systemRedColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="39.329999999999998" id="k0W-Ws-agY"/>
+                                                        <constraint firstAttribute="width" constant="36" id="wst-K1-lCC"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="nJ4-2J-8rD">
+                                                    <rect key="frame" x="64" y="11" width="306" height="64"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" name="blackwhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" name="alertRed"/>
+                                            <constraints>
+                                                <constraint firstItem="nJ4-2J-8rD" firstAttribute="leading" secondItem="Dsk-b7-l1i" secondAttribute="trailing" constant="8" symbolic="YES" id="AZx-nk-FaQ"/>
+                                                <constraint firstItem="Dsk-b7-l1i" firstAttribute="centerY" secondItem="gAJ-Vi-uhC" secondAttribute="centerY" id="QsH-X3-dYK"/>
+                                                <constraint firstItem="nJ4-2J-8rD" firstAttribute="top" secondItem="gAJ-Vi-uhC" secondAttribute="topMargin" id="RQE-EO-5AB"/>
+                                                <constraint firstItem="nJ4-2J-8rD" firstAttribute="trailing" secondItem="gAJ-Vi-uhC" secondAttribute="trailingMargin" id="g5W-dm-4yi"/>
+                                                <constraint firstItem="Dsk-b7-l1i" firstAttribute="leading" secondItem="gAJ-Vi-uhC" secondAttribute="leadingMargin" id="gfE-xh-n6v"/>
+                                                <constraint firstItem="nJ4-2J-8rD" firstAttribute="bottom" secondItem="gAJ-Vi-uhC" secondAttribute="bottomMargin" id="udE-op-PrH"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
